--- a/frontend/.env
+++ b/frontend/.env
@@ -1,3 +1,4 @@
-VITE_GOOGLE_CLIENT_ID=603770946634-28r4agqeru87a1mfr9mcu4tu66rmr249.apps.googleusercontent.com
-VITE_BZENV=development
+VITE_GOOGLE_CLIENT_ID=""
+VITE_BZENV=development #or Production 
 VITE_DEV_PROXY=http://localhost:3000
+
