--- a/frontend/.env
+++ b/frontend/.env
@@ -1,4 +1,4 @@
 VITE_GOOGLE_CLIENT_ID="275401672397-nb45vup6qh8fuifo3e2c9jukrkli1gdt.apps.googleusercontent.com"
 VITE_BZENV=development #or Production 
-VITE_DEV_PROXY=http://localhost:3000
+VITE_DEV_PROXY=https://tinylink-url.onrender.com
 
